[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "measured-one-agents-rules"
version = "0.1.0"
description = "Shared Cursor agents, rules, skills, and clinical reference data for measured.one projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Eli Goldberg"}
]
keywords = ["cursor", "agents", "rules", "skills", "healthcare", "analytics"]

dependencies = [
    "duckdb>=1.0.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.urls]
Repository = "https://github.com/goldberg-consulting/measured.one.agents-rules"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "extension/",
    "ReferenceData/__pycache__/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert usage (acceptable in tests)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
